--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-pymupdf==1.26.5
+click==8.1.7
+pikepdf==9.11.0
+PyMuPDF==1.26.5
 Pillow==12.0.0
-mss==10.1.0
 winrt-runtime==3.2.1
 winrt-Windows.Foundation==3.2.1
 winrt-Windows.Foundation.Collections==3.2.1
